fix(web-components): fixes card button focus color in high contrast mode
fixes focus color of expand button in high contrast mode

--- a/packages/web-components/src/components/ic-card/ic-card.css
+++ b/packages/web-components/src/components/ic-card/ic-card.css
@@ -246,6 +246,11 @@ button {
   .card.disabled .card-title {
     color: GrayText;
   }
+
+  .toggle-button:focus,
+  .toggle-button:hover {
+    outline-color: Highlight;
+  }
 }
 
 /* Add back in after storybook has the `color-scheme: light dark` code */
